--- a/README
+++ b/README
@@ -1,115 +1,115 @@
-REZO - Urban Feedback System
+# 🚀 REZO - Urban Feedback System
 
-REZO is an innovative Urban Feedback System developed for the CivicStack - Hack for Governance & Public Systems. It enhances civic engagement by streamlining complaint dashboards, community surveys, and AI-driven ticketing for municipal authorities and citizens.
-Team: REZOTeam Leader: Vimalharirhar Kumar
-📋 Problem Statement
-Urban feedback systems often face challenges like language barriers, fake complaints, and lack of transparency. REZO addresses these by providing an inclusive, AI-powered platform for complaint submission, verification, and prioritization.
-✨ Key Features
-REZO stands out with the following unique features:
+**REZO** is an innovative Urban Feedback System developed for the **CivicStack - Hack for Governance & Public Systems**. It enhances civic engagement by streamlining complaint dashboards, community surveys, and AI-driven ticketing for both municipal authorities and citizens.
 
-Multilingual Complaint Submission: Supports text, voice, or image-based complaints in 22+ Indian languages, integrated with location data.
-AI Verification: Uses a CNN-based model to filter out up to 70% of fake or irrelevant submissions.
-Emotion Keyword Extraction: Employs DistilBERT and Bhashini’s STT to assess complaint urgency based on emotional intensity.
-Location Sensitivity Scoring: Prioritizes complaints near sensitive zones (e.g., schools, hospitals) using the Overpass API.
-Priority Scoring Engine: Ranks complaints by combining AI confidence, emotion, and location data.
-Real-Time Heatmaps: Displays complaint density and status via Mapbox for transparency.
-Admin Dashboard: Centralized interface for efficient complaint management.
-Civic Chatbot: Guides users on government schemes, complaint status, and civic awareness.
+---
 
-🆚 Comparison with Existing Solutions
+## 👥 Team
 
+- **Team Name:** REZO  
+- **Team Leader:** Vimalharirhar Kumar
 
+---
 
-Feature
-Existing Solutions
-REZO Solutions
+## 📋 Problem Statement
 
+Urban feedback systems face challenges such as:
+- Language barriers
+- Fake or irrelevant complaints
+- Lack of transparency in redressal mechanisms
 
+**REZO** addresses these by providing an **inclusive, AI-powered platform** for complaint submission, verification, and prioritization.
 
-AI Image Validation
-❌
-✅
+---
 
+## ✨ Key Features
 
-Emotion Detection
-❌
-✅
+| Feature | Existing Solutions | REZO |
+|--------|--------------------|------|
+| AI Image Validation | ❌ | ✅ |
+| Emotion Detection | ❌ | ✅ |
+| Sensitive Location Scoring | ❌ | ✅ |
+| Multilingual Support | Limited | ✅ (22+ Indian languages) |
+| Public Heatmap Transparency | ❌ | ✅ (Mapbox-powered) |
 
+- 🗣️ **Multilingual Complaint Submission**  
+  - Supports **text, voice, and image-based complaints** in 22+ Indian languages  
+  - Integrated with **location data**
+  
+- 🤖 **AI Verification**  
+  - CNN model filters out up to **70%** of fake/irrelevant submissions
 
-Sensitive Location Scoring
-❌
-✅
+- ❤️ **Emotion Keyword Extraction**  
+  - Uses **DistilBERT + Bhashini’s STT** to assess urgency
 
+- 🧠 **Location Sensitivity Scoring**  
+  - Prioritizes complaints near **sensitive zones** (schools, hospitals) using **Overpass API**
 
-Multilingual Support
-Limited
-✅ (22+ Indian languages)
+- 🎯 **Priority Scoring Engine**  
+  - Ranks complaints using a composite score from **AI confidence + emotion + location**
 
+- 🌐 **Real-Time Heatmaps**  
+  - Visualizes complaint density and status using **Mapbox**
 
-Public Heatmap Transparency
-❌
-✅ (Mapbox-powered)
+- 🛠️ **Admin Dashboard**  
+  - Centralized, responsive interface for managing complaints
 
+- 🧑‍💼 **Civic Chatbot**  
+  - Answers FAQs, tracks complaint status, and provides civic awareness
 
-🌍 Social Impact
-REZO empowers citizens and municipal authorities with:
-For Citizens
+---
 
-Inclusivity: Supports 90%+ of India’s population with vernacular voice/text input via Bhashini.
-Reliability: Reduces fake complaints by 70% with AI verification.
-Real-Time Updates: Notifies users on complaint progress and civic alerts, reducing missed utility payments by 30%.
-Transparency: Offers live Mapbox heatmaps to track all complaints.
-Empowerment: CivicBot answers 100+ FAQs and provides updates on 50+ government schemes.
+## 🌍 Social Impact
 
-For Authorities
+### 🧑 For Citizens
 
-Streamlined complaint prioritization and management.
-Enhanced decision-making with AI insights.
-Increased public trust through transparent tracking.
+- **Inclusivity:** Supports **90%+** of India’s population via vernacular input (powered by Bhashini)
+- **Reliability:** Reduces fake complaints by **70%**
+- **Transparency:** Real-time **Mapbox heatmaps**
+- **Notifications:** Tracks complaint status and sends utility/civic alerts
+- **Empowerment:** CivicBot answers **100+ FAQs**, tracks **50+ government schemes**
 
-🛠️ Technology Stack
+### 🏛️ For Authorities
 
-Frontend: Mapbox for heatmaps, responsive admin dashboard, chatbot UI.
-Backend: CNN for image verification, DistilBERT for emotion detection.
-APIs: Overpass API (location scoring), Bhashini (multilingual support).
-Core: Priority scoring engine for complaint ranking.
+- Intelligent complaint **prioritization**
+- **AI insights** to support informed decision-making
+- Builds **public trust** via transparency
 
-🚀 Getting Started
-Prerequisites
+---
 
-Node.js
-API keys for Mapbox, Overpass API, and Bhashini
+## 🛠️ Technology Stack
 
-Installation
+| Layer       | Technology |
+|-------------|------------|
+| **Frontend** | Mapbox (Heatmaps), Chatbot UI, Admin Dashboard |
+| **Backend** | CNN (Image verification), DistilBERT (Emotion detection) |
+| **APIs**    | Overpass API (Location Scoring), Bhashini (Multilingual Support) |
+| **Core**    | Priority Scoring Engine |
 
-Clone the repository:git clone https://github.com/<your-username>/rezo.git
+---
 
+## 🚀 Getting Started
 
-Install dependencies:npm install
+### Prerequisites
 
+- Node.js
+- API keys for:
+  - Mapbox
+  - Overpass API
+  - Bhashini
 
-Configure environment variables with API keys.
-Run the application:npm start
+### Installation
 
+```bash
+# Clone the repository
+git clone https://github.com/<your-username>/rezo.git
+cd rezo
 
+# Install dependencies
+npm install
 
-🤝 Contributing
-Contributions are welcome! To contribute:
+# Configure environment variables
+# Add your API keys in a .env file
 
-Fork the repository.
-Create a feature branch (git checkout -b feature/your-feature).
-Commit changes (git commit -m "Add your feature").
-Push to the branch (git push origin feature/your-feature).
-Open a pull request.
-
-📜 License
-This project is licensed under the MIT License.
-📬 Contact
-Vimalharirhar KumarEmail: [your-email@example.com]GitHub: [your-github-profile]
-🙏 Acknowledgments
-
-CivicStack for hosting the Hack for Governance & Public Systems.
-Bhashini for multilingual support.
-Mapbox and Overpass API for geospatial capabilities.
-
-Thank you for exploring REZO! Let’s build smarter, inclusive urban feedback systems together.
+# Run the application
+npm start
